[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#Main
cgmath = "0.18.0"
pixels = "0.10.0"
winit = "0.27.5"
#Helper
env_logger = "0.9"
log = "0.4"
winit_input_helper = "0.13"